--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="CVMaker">
-    <meta name="author" content="KazemMirzayi">
-    <title>CV Maker</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1 class="FirstHeader"> Curriculum Vitea </h1>
+<head>
+  <title>CV Maker</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+  <h1>Curriculum Vitea<hr></h1>
+  <form id="myForm">
+    <h2 type="text" id="heading2" name="heading2" required>Personal Information</h2>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
 
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
 
+    <label for="Address">Address:</label>
+    <input type="Address" id="Address" name="Address" required>
 
+    <label for="PhotoContainer">Upload your Photo</label>
+    <input type="file" id="PhotoContainer" name="PhotoContainer">
+   
+    <button type="button" id="printBtn">Print</button>
+  </form>
+  
+  
+  <div id="result"></div>
 
-    
-    <script src="/script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
