--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </h1>
   <form id="myForm">
     <h2 type="text" id="heading2" name="heading2" required>Personal Information</h2>
+
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
 
@@ -22,19 +23,23 @@
 
     <label for="Address">Address:</label>
     <input type="text" id="Address" name="Address" required>
-    
+
+
     <h2 type="text" id="heading3" name="heading3" required>Education</h2>
-    <p>
-      <label for="uni">University</label>
-      <input type="text" id="uni" name="uni" required>
+    <div id="forms-container">
+      <div class="form-container">
+        <label for="uni">University</label>
+        <input type="text" id="uni" name="uni" required>
 
-      <label for="graduationDate">Graduation Date:</label>
-      <input type="date" id="date" name="date" required>
+        <label for="graduationDate">Graduation Date:</label>
+        <input type="date" id="date" name="date" required>
 
-      <label for="subject">Subject:</label>
-      <input type="text" id="subject" name="subject" required>
-    </p>
-    
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" name="subject" required>
+      </div>
+    </div>
+    <button onclick="addForm()" id="addEducation">+ Add Education</button>
+    <br>
     <button type="button" id="printBtn">Print</button>
   </form>
 
