--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>CV Maker</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="print.css" media="print">
 </head>
 
 <body>
@@ -13,34 +14,35 @@
     <hr id="headHr">
   </h1>
   <form id="myForm">
-    <h2 type="text" id="heading2" name="heading2" required>Personal Information</h2>
 
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
+    <div class="info">
+      <h2 type="text" class="heading2" id="heading2" name="heading2" required>Personal Information</h2>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
 
-    <label for="Address">Address:</label>
-    <input type="text" id="Address" name="Address" required>
+      <label for="Address">Address:</label>
+      <input type="text" id="Address" name="Address" required>
+    </div>
+    <div class="info">
+      <h2 type="text" id="heading3" name="heading3" required>Education</h2>
+      <div id="forms-container">
+        <div class="form-container">
+          <label for="uni">University</label>
+          <input type="text" id="uni" name="uni" required>
 
+          <label for="graduationDate">Graduation Date:</label>
+          <input type="date" id="date" name="date" required>
 
-    <h2 type="text" id="heading3" name="heading3" required>Education</h2>
-    <div id="forms-container">
-      <div class="form-container">
-        <label for="uni">University</label>
-        <input type="text" id="uni" name="uni" required>
-
-        <label for="graduationDate">Graduation Date:</label>
-        <input type="date" id="date" name="date" required>
-
-        <label for="subject">Subject:</label>
-        <input type="text" id="subject" name="subject" required>
+          <label for="subject">Subject:</label>
+          <input type="text" id="subject" name="subject" required>
+        </div>
       </div>
     </div>
-    <button onclick="addForm()" id="addEducation">+ Add Education</button>
     <br>
-    <button type="button" id="printBtn">Print</button>
+    <button type="button" id="printButton">Print</button>
   </form>
 
 
