--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <label for="Address">Address:</label>
       <input type="text" id="Address" name="Address" required>
     </div>
-    <div class="info">
-      <h2 type="text" id="heading3" name="heading3" required>Education</h2>
+    <div class="info">      
       <div id="forms-container">
         <div class="form-container">
-          <label for="uni">University</label>
+          <h2 type="text" id="heading3" name="heading3" required>Education</h2>
+          <label for="uni">University:</label>
           <input type="text" id="uni" name="uni" required>
 
           <label for="graduationDate">Graduation Date:</label>
@@ -38,8 +38,9 @@
 
           <label for="subject">Subject:</label>
           <input type="text" id="subject" name="subject" required>
-        </div>
+        </div>        
       </div>
+      <button id="addForm">+ Add more </button>
     </div>
     <br>
     <button type="button" id="printButton">Print</button>
