--- a/index.html
+++ b/index.html
@@ -26,26 +26,28 @@
       <label for="Address">Address:</label>
       <input type="text" id="Address" name="Address" required>
     </div>
-    <div class="info">      
+    <div class="info">
       <div id="forms-container">
         <div class="form-container">
           <h2 type="text" id="heading3" name="heading3" required>Education</h2>
           <label for="uni">University:</label>
           <input type="text" id="uni" name="uni" required>
 
-          <label for="graduationDate">Graduation Date:</label>
-          <input type="date" id="date" name="date" required>
+          <label for="startingDate">Starting Date:</label>
+          <input type="date" id="startingDate" name="startingDate" required>
+          <label for="endingDate">Ending Date:</label>
+          <input type="date" id="endingDate" name="endingDate" required>
 
           <label for="subject">Subject:</label>
           <input type="text" id="subject" name="subject" required>
-        </div>        
+        </div>
       </div>
       <button id="addForm">+ Add more </button>
     </div>
     <br>
+
     <button type="button" id="printButton">Print</button>
   </form>
-
 
   <div id="result"></div>
 
